--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 							</div>	
 							<div class="single_blog_dsc">
 								<h3>Акция: "2=3"</h3>
-								<p>С Пн по Чт (круглосуточно), при покупке двух часов, третий час бесплатно!</p>
+								<p>С Пн по Чт, с 10:00 - 16:00 при покупке двух часов, третий час бесплатно!</p>
 								<!-- <a href="blog_single.html" target="_blank">больше</a> -->
 							</div>
 						</div>
